--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
 <body>
 
 <h1> <i>RONALDO O FENOMENO By: Antonio neto</i></h1>
-
+<img id="ronaldo3" src="download (2).jpeg"
 <h2> Nazário é considerado um dos maiores atletas de todos os tempos. Entre as conquistas de sua carreira, ele ocupa a segunda posição no ranking de goleadores da seleção brasileira e da história das Copas do Mundo. Além disso, Ronaldo foi um dos protagonistas do pentacampeonato brasileiro. História que se tornou ainda mais marcante pela sua superação após sofrer uma grave lesão. Ronaldo Nazário acumulou títulos coletivos e individuais durante seu período como jogador. Também tem em seu currículo a passagem por times de primeiro escalão do futebol mundial. Ronaldo Nazário se encaixa em uma seleta lista de atletas que fizeram sucesso no esporte e nos negócios, caso do astro Michael Jordan e do conhecido George Foreman.</h2>
-<img id="ronaldo1" src="images (2).jpeg">
+<img id="ronaldo1" src="download (1).jpeg">
 
 <h3> Ronaldo Nazário, o “Fenômeno”, recebeu esse apelido da imprensa italiana, em uma das melhores temporadas de sua carreira, na Internazionale (Inter de Milão). Sua brilhante carreira se iniciou profissionalmente no Cruzeiro em 1993, conquistando a Copa do Brasil e o Campeonato Mineiro. Posteriormente, seguiu para a Europa para jogar no PSV Eindhoven, assim como seu compatriota Romário, sendo artilheiro do Campeonato Holandês e campeão da Copa dos Países Baixos. Depois do tremendo sucesso na Holanda, Ronaldo foi comprado pelo Barcelona-ESP em 1996, onde teve a melhor temporada de sua carreira em número de gols, conquistando a Supercopa da Espanha, a Copa do Rei e a Recopa Europeia, escolhido como Melhor Jogador do Mundo pela FIFA. Na temporada seguinte, transferiu-se para a Internazionale, quebrando o recorde da transferência mais cara da história até então. Foi eleito pela segunda vez como o melhor jogador do mundo em sua primeira temporada no clube e ganhou um novo “sobrenome”. Assim, passou de Ronaldo Nazário para Ronaldo Fenômeno. </h3>
-<img id="ronaldo2" src="images (1).jpeg">
+<img id="ronaldo2" src="download.jpeg">
 
+<h4> Após a desclassificação precoce na Copa Libertadores da América de 2011, Ronaldo não conseguiu mais suportar suas dores físicas, e decidiu anunciar oficialmente a sua aposentadoria em 14 de fevereiro de 2011, numa coletiva de imprensa.[91] Segundo ele, sua aposentadoria se deu pelo fato de estar enfrentando seguidas lesões, inclusive revelando que sofria de hipotireoidismo, um distúrbio metabólico que desacelera o metabolismo e dificulta a perda de peso. O jogador afirmou que o problema poderia ser resolvido com ingestão de hormônios, porém, esta prática é proibida no futebol, e acarretaria numa suspensão por doping.[92] Porém, médicos discordam que o tratamento seja confundido com doping.[93] E o próprio médico do Corinthians afirmou que Ronaldo não tinha esta doença. O hipotireoidismo costuma ser associado a um leve ganho de peso (eminentemente por acúmulo de líquidos e não por aumento de gordura) e uma dificuldade para se livrar de quilos extras. </h4>
 
+<h5> ESTASTISTICAS RONALDO FENOMENO NA CARREIRA:	452 JOGOS	295 GOLS	75 ASSISTENCIAS 	 </h5>
+ 
+<h6> Hoje em dia Ronaldo Luís Nazário de Lima, popularmente conhecido como Ronaldo Fenômeno, é um empresário e ex-futebolista brasileiro que atuava como centroavante, amplamente reconhecido como um dos melhores de todos os tempos. </h6>
 
-</body>
+<img id="ronaldo4" src="ronaldo-fenomeno-nos-tempos-de-real-madrid_1_91885.jpeg"
 </html>
