--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <h3> Ronaldo Nazário, o “Fenômeno”, recebeu esse apelido da imprensa italiana, em uma das melhores temporadas de sua carreira, na Internazionale (Inter de Milão). Sua brilhante carreira se iniciou profissionalmente no Cruzeiro em 1993, conquistando a Copa do Brasil e o Campeonato Mineiro. Posteriormente, seguiu para a Europa para jogar no PSV Eindhoven, assim como seu compatriota Romário, sendo artilheiro do Campeonato Holandês e campeão da Copa dos Países Baixos. Depois do tremendo sucesso na Holanda, Ronaldo foi comprado pelo Barcelona-ESP em 1996, onde teve a melhor temporada de sua carreira em número de gols, conquistando a Supercopa da Espanha, a Copa do Rei e a Recopa Europeia, escolhido como Melhor Jogador do Mundo pela FIFA. Na temporada seguinte, transferiu-se para a Internazionale, quebrando o recorde da transferência mais cara da história até então. Foi eleito pela segunda vez como o melhor jogador do mundo em sua primeira temporada no clube e ganhou um novo “sobrenome”. Assim, passou de Ronaldo Nazário para Ronaldo Fenômeno. </h3>
 <img id="ronaldo2" src="download.jpeg">
 
-<h5> Após a desclassificação precoce na Copa Libertadores da América de 2011, Ronaldo não conseguiu mais suportar suas dores físicas, e decidiu anunciar oficialmente a sua aposentadoria em 14 de fevereiro de 2011, numa coletiva de imprensa.[91] Segundo ele, sua aposentadoria se deu pelo fato de estar enfrentando seguidas lesões, inclusive revelando que sofria de hipotireoidismo, um distúrbio metabólico que desacelera o metabolismo e dificulta a perda de peso. O jogador afirmou que o problema poderia ser resolvido com ingestão de hormônios, porém, esta prática é proibida no futebol, e acarretaria numa suspensão por doping.[92] Porém, médicos discordam que o tratamento seja confundido com doping.[93] E o próprio médico do Corinthians afirmou que Ronaldo não tinha esta doença. O hipotireoidismo costuma ser associado a um leve ganho de peso (eminentemente por acúmulo de líquidos e não por aumento de gordura) e uma dificuldade para se livrar de quilos extras. </h5>
+<h4> Após a desclassificação precoce na Copa Libertadores da América de 2011, Ronaldo não conseguiu mais suportar suas dores físicas, e decidiu anunciar oficialmente a sua aposentadoria em 14 de fevereiro de 2011, numa coletiva de imprensa.[91] Segundo ele, sua aposentadoria se deu pelo fato de estar enfrentando seguidas lesões, inclusive revelando que sofria de hipotireoidismo, um distúrbio metabólico que desacelera o metabolismo e dificulta a perda de peso. O jogador afirmou que o problema poderia ser resolvido com ingestão de hormônios, porém, esta prática é proibida no futebol, e acarretaria numa suspensão por doping.[92] Porém, médicos discordam que o tratamento seja confundido com doping.[93] E o próprio médico do Corinthians afirmou que Ronaldo não tinha esta doença. O hipotireoidismo costuma ser associado a um leve ganho de peso (eminentemente por acúmulo de líquidos e não por aumento de gordura) e uma dificuldade para se livrar de quilos extras. </h4>
 
-<h6> 
+<h5> 
     Clubes:
     
     Ronaldo jogou em vários clubes ao longo de sua carreira, incluindo Cruzeiro (1993-1994), PSV Eindhoven (1994-1996), Barcelona (1996-1997), Internazionale (1997-2002), Real Madrid (2002-2007), Milan (2007-2008) e Corinthians (2009-2011).
@@ -39,8 +39,8 @@
     Ele marcou 62 gols em 98 jogos pela seleção brasileira.
     Ronaldo venceu a Liga dos Campeões da UEFA três vezes, com o Real Madrid em 1998, 2000 e 2002.
     Ele foi eleito o Jogador do Ano pela FIFA em 1996, 1997 e 2002.
-    Essas são apenas algumas das estatísticas notáveis de Ronaldo Fenômeno. Sua habilidade, velocidade e poder de finalização o tornaram uma lenda do futebol e uma referência para muitos jogadores da nova geração. </h6>
+    Essas são apenas algumas das estatísticas notáveis de Ronaldo Fenômeno. Sua habilidade, velocidade e poder de finalização o tornaram uma lenda do futebol e uma referência para muitos jogadores da nova geração. </h5>
  
 
-<img id="ronaldo5" src="images.jpeg"
+<img id="ronaldo5" src="images.jpeg">
 </html>
